[package]
name = "askturret-grid-wasm"
version = "0.1.0"
authors = ["AskTurret"]
edition = "2021"
license = "MIT"
repository = "https://github.com/alprimak/askturret-grid"
description = "High-performance WASM acceleration for @askturret/grid - sorting, filtering, and trigram indexing"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

# For better error messages in development
[profile.dev]
opt-level = 1

# Optimize for size in release
[profile.release]
opt-level = "z"
lto = true
